# grid-compression

./: CMakeLists.txt  README.md  algorithm.h  bootstrap.sh  concatenate.sh  graph.h  input.txt  input2.txt  int_set.h  io.h  iterated_local_search.h  main.as  main.cc  main.cpp  numvc.h  output.txt  random_picker.h  timer.h  transaction.h
maximum_independent_set/: free_vertices.h  iterated_local_search.h  permutation.h  solution.h  transaction.h
